--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ hello world
 Bienvenue dans le dépot distant.
 Création du conflit - version depot local
 Création du conflit - version depot distant
+Ajout de la ligne sur ma branche
