--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-hello world
+hello world.
 Bienvenue dans le dépot distant.
-Création du conflit - version depot local
-Création du conflit - version depot distant
-Ajout de la ligne sur ma branche
-Ligne ajoutée dans le master
+Création du conflit - version depot local.
+Création du conflit - version depot distant.
+Ajout de la ligne sur ma branche.
+Ligne ajoutée dans le master.
+ajout ligne 7
